# Functional_Analysis_Agent

./: .env  README.md  pyproject.toml
data/: functional_analysis_index.pkl  theories.md  theories_index.pkl
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/components/: KeyStepRenderer.tsx  LatexPreview.tsx
src/functional_analysis_agent/: __init__.py  api.py  context.py  graph.py  index.py  prompts.py  state.py  tools.py  utils.py
